# milvus-storage

cpp/: CMakeLists.txt  Makefile  conanfile.py
cpp/include/milvus-storage/filesystem/: fs.h
cpp/include/milvus-storage/filesystem/s3/: s3_internal.h
cpp/src/filesystem/: fs.cpp
cpp/src/filesystem/s3/: AliyunSTSClient.cpp  TencentCloudSTSClient.cpp  multi_part_upload_s3_fs.cpp  s3_client.cpp
cpp/test/: CMakeLists.txt  customized_stream.h  s3_test.cpp  s3_test_direct_io.cpp  s3_test_file_stream.cpp  s3_test_memory_buffer.cpp  s3_test_memory_to_disk.cpp  s3_test_nullstream_vs_memory.cpp  upload_data.py
cpp/test/filesystem/: s3_fs_test.cpp
